# rdb2kg

./: .gitignore  HANDOFF.md  ModelingAdvice.md  README.md  SETUP.md  STATUS.md  manifesto.md  pyproject.toml  requirements.txt
.claude/commands/: ask.md  build_kg.md
examples/chinook/: mapping.ttl
examples/chinook/queries/: albums_by_artist.sparql  customer_purchases.sparql  metal_tracks.sparql  tracks_per_album.sparql
examples/chinook/questions/: tracks_by_genre.yaml
src/rdb2kg/: cli.py  db_service.py  html_report.py  inspect_db.py  materialize.py  mcp_server.py  ox_store.py  r2rml.py  report.py  sparql_service.py  workspace_service.py
src/rdb2kg/demo/: __init__.py  chinook.py
tests/: test_db_service.py  test_inspect.py  test_materialize.py  test_modeling_advice.py  test_r2rml.py  test_report.py  test_sparql_service.py  test_workspace_service.py
workspace/: .gitignore  CLAUDE.md  connection.txt.example
workspace/questions/: albums_by_artist.yaml  customer_purchase_history.yaml  employee_reports_to.yaml  playlists_containing_track.yaml
